TypeChainを追加、プロジェクトに配置

--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sync": "yarn typechain --target ethers-v5 --out-dir src/util/contract '../contract/artifacts/contracts/BusinessCard.sol/BusinessCard.json'"
   },
   "dependencies": {
     "daisyui": "^2.6.4",
