--- a/contract/package.json
+++ b/contract/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@ericxstone/hardhat-blockscout-verify": "^1.0.0",
     "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
