--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -13,5 +13,8 @@
     "prettier"
   ],
   "plugins": ["@typescript-eslint", "import"],
-  "rules": { "react-hooks/exhaustive-deps": "off" }
+  "rules": {
+    "react-hooks/exhaustive-deps": "off",
+    "@next/next/no-img-element": "off"
+  }
 }
