--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "daisyui": "^2.6.4",
     "ethers": "^5.5.4",
     "next": "12.0.10",
+    "next-themes": "^0.1.1",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
