--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,8 @@
     "ethers": "^5.5.4",
     "next": "12.0.10",
     "next-themes": "^0.1.1",
+    "playwright-aws-lambda": "^0.7.0",
+    "playwright-core": "^1.20.0",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
