--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -19,6 +19,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/pages/api/ss.js"],
   "exclude": ["node_modules", "**/*.js"]
 }
