--- a/app/package.json
+++ b/app/package.json
@@ -5,13 +5,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sync": "yarn typechain --target ethers-v5 --out-dir src/util/contract '../contract/artifacts/contracts/NameCard.sol/NameCard.json'"
   },
   "dependencies": {
+    "daisyui": "^2.13.6",
     "ethers": "^5.5.4",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "tiny-invariant": "^1.2.0",
     "web3modal": "^1.9.5"
   },
