--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,8 @@
     "@pinata/sdk": "^1.1.24",
     "daisyui": "^2.13.6",
     "ethers": "^5.5.4",
+    "markdown-it": "^12.3.2",
+    "markdown-it-emoji": "^2.0.0",
     "next": "12.0.10",
     "playwright-aws-lambda": "^0.7.0",
     "playwright-core": "^1.20.2",
@@ -24,6 +26,7 @@
   },
   "devDependencies": {
     "@typechain/ethers-v5": "^9.0.0",
+    "@types/markdown-it": "^12.2.3",
     "@types/node": "17.0.16",
     "@types/react": "17.0.39",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
