--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "ethers": "^5.5.4",
     "markdown-it": "^12.3.2",
     "markdown-it-emoji": "^2.0.0",
+    "nanoid": "^3.3.2",
     "next": "12.0.10",
     "playwright-aws-lambda": "^0.7.0",
     "playwright-core": "^1.20.2",
