--- a/app/package.json
+++ b/app/package.json
@@ -15,11 +15,11 @@
     "markdown-it": "^12.3.2",
     "markdown-it-emoji": "^2.0.0",
     "nanoid": "^3.3.2",
-    "next": "12.0.10",
+    "next": "^12.1.5-canary.4",
     "playwright-aws-lambda": "^0.7.0",
     "playwright-core": "^1.20.2",
-    "react": "17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.1.0-next-fc47cb1b6-20220404",
+    "react-dom": "^18.1.0-next-fc47cb1b6-20220404",
     "react-icons": "^4.3.1",
     "react-query": "^3.34.19",
     "tiny-invariant": "^1.2.0",
