--- a/app/package.json
+++ b/app/package.json
@@ -21,7 +21,9 @@
     "react": "^18.1.0-next-fc47cb1b6-20220404",
     "react-dom": "^18.1.0-next-fc47cb1b6-20220404",
     "react-icons": "^4.3.1",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-query": "^3.34.19",
+    "react-select": "^5.2.2",
     "tiny-invariant": "^1.2.0",
     "web3modal": "^1.9.5"
   },
