--- a/app/package.json
+++ b/app/package.json
@@ -16,11 +16,13 @@
     "markdown-it-emoji": "^2.0.0",
     "nanoid": "^3.3.2",
     "next": "^12.1.5-canary.4",
+    "next-seo": "^5.4.0",
     "playwright-aws-lambda": "^0.7.0",
     "playwright-core": "^1.20.2",
     "react": "^18.1.0-next-fc47cb1b6-20220404",
     "react-dom": "^18.1.0-next-fc47cb1b6-20220404",
     "react-icons": "^4.3.1",
+    "react-qr-code": "^2.0.5",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-query": "^3.34.19",
     "react-select": "^5.2.2",
