ファイル構成などを変更

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,8 +5,7 @@
     "source.organizeImports": true,
     "source.fixAll.eslint": true
   },
-  "eslint.workingDirectories": ["./app"],
-  "solidity.packageDefaultDependenciesDirectory": "contract/node_modules",
+  "eslint.workingDirectories": ["./projects/app"],
   "[javascriptreact]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   }
