Profile周辺を実装

--- a/projects/app/package.json
+++ b/projects/app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.0",
     "@inaridiy/useful-web3": "^0.0.7",
     "@metamask/detect-provider": "^1.2.0",
     "@walletconnect/web3-provider": "^1.7.7",
