--- a/projects/app/package.json
+++ b/projects/app/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.3.1",
     "react-query": "^3.38.0",
     "react-toastify": "^8.2.0",
+    "recoil": "^0.7.2",
     "web3modal": "^1.9.5"
   },
   "devDependencies": {
