--- a/projects/app/package.json
+++ b/projects/app/package.json
@@ -20,6 +20,7 @@
     "next": "^12.1.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.30.0",
     "react-icons": "^4.3.1",
     "react-query": "^3.38.0",
     "react-toastify": "^8.2.0",
