設定を調整

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,11 @@
   "[javascriptreact]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
+  "solidity.packageDefaultDependenciesDirectory": "node_modules",
   "[xml]": {
     "editor.defaultFormatter": "DotJoshJohnson.xml"
+  },
+  "[solidity]": {
+    "editor.defaultFormatter": "NomicFoundation.hardhat-solidity"
   }
 }
