--- a/projects/contract/package.json
+++ b/projects/contract/package.json
@@ -35,6 +35,8 @@
     "typescript": "^4.6.4"
   },
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.5",
+    "@openzeppelin/hardhat-upgrades": "^1.17.0",
     "@typechain/ethers-v5": "^10.0.0",
     "ts-node": "^10.7.0"
   }
